-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
203a8d8333c8be8412289537efd490b8da0425b2
There is a typo in qwindowsurface_raster.cpp code that causes the following compile error:
painting/qwindowsurface_raster.cpp:82: error: 'class QRasterWindowSurfacePrivate' has no member named 'needsSync'
The QT_NO_MITSHM is misspelled in line 100. It has been introduced in commit 30dee4f433d2426ce2dc0bccda8e62683380a1c4.
The following patch fixes the issue:
--- a/src/gui/painting/qwindowsurface_raster.cpp
+++ b/src/gui/painting/qwindowsurface_raster.cpp
@@ -97,7 +97,7 @@ QRasterWindowSurface::QRasterWindowSurface(QWidget *window, bool setDefaultSurfa
d_ptr->translucentBackground = X11->use_xrender
&& window->x11Info().depth() == 32;
#endif
-#ifndef QT_NO_MITHSM
+#ifndef QT_NO_MITSHM
d_ptr->needsSync = false;
#endif
#endif