Build fix to raster window surface.

Fixed typo in qwindowsurface_raster.cpp, to get rid of compile error:
    'class QRasterWindowSurfacePrivate' has no member named 'needsSync'
Mispelling was introduces by commit: 30dee4f4

Task-number: QTBUG-23320
Reviewed-by: Samuel Rødal <samuel.rodal@nokia.com>

Change-Id: If473289e0549b2dec440285fec1ce64030de035f
Reviewed-by: Samuel Rødal <samuel.rodal@nokia.com>